.vscode/allianceuat_compare/force-app/main/default/objects/Work_Address__c/Work_Address__c.object-meta.xml
<CustomObject>
    <description>List of address for this client</description>
    <label>Work Address</label>
    <nameField>
        <label>Work Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>