.vscode/allianceuat_compare/force-app/main/default/objects/Work_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>