.vscode/allianceuat_compare/force-app/main/default/objects/Work_Address__c/fields/Impacted_Job_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Job_Count_c__c</fullName>
    <label>ImpactedJobsCount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>