.vscode/allianceuat_compare/force-app/main/default/objects/Work_Address__c/fields/Safety_Site_Check__c.field-meta.xml
<CustomField>
    <fullName>Safety_Site_Check__c</fullName>
    <label>Safety: Site Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>